--- a/templates/item/hat-sheet.html
+++ b/templates/item/hat-sheet.html
@@ -64,6 +64,18 @@
         />
       </div>
 
+      {{!-- rule Text --}}
+      <div class="form-group">
+        <label>{{ localize "PB.RuleText" }}:</label>
+        <input
+          type="text"
+          name="data.ruleText"
+          value="{{data.data.ruleText}}"
+          placeholder=""
+          data-dtype="String"
+        />
+      </div>
+
       {{!-- Carry weight --}}
       <div class="form-group">
         <label>{{ localize "PB.CarryWeight" }}:</label>
