--- a/scss/pirateborg/_character-sheet.scss
+++ b/scss/pirateborg/_character-sheet.scss
@@ -5,49 +5,28 @@
       min-height: 650px;
 
       .sheet-header {
-        flex: 0 0 200px;
-
+        gap: 16px;
         .header-col1 {
           flex: 0 0 200px;
-          margin: 5px;
           padding: 0;
         }
 
         .header-col2 {
-          flex: 1 0 350px;
-          margin: 5px;
+          flex: 1;
           display: flex;
           flex-direction: column;
-
           .rest-buttons {
-            margin-left: 14px;
-            width: 170px;
-          }
-
-          button {
-            border: none;
-            border-bottom: 2px solid #777;
-            border-radius: 0;
-            font-family: var(--h2-font);
-            font-size: 14px;
-            height: 28px;
-          }
-
-          .broken-button,
-          .rest-button {
-            width: 80px;
-          }
-
-          .get-better-button {
-            width: 90px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
           }
         }
 
         .header-col3 {
           flex: 0 0 120px;
-          margin: 5px;
           display: flex;
           flex-direction: column;
+          gap: 11px;
         }
 
         .profile-img {
@@ -56,21 +35,15 @@
         }
 
         .name-row {
-          flex: 0 0 50px;
-          margin-bottom: 7px;
-
-          input[type="text"] {
-            height: 45px;
-            width: 100%;
-          }
+          margin-left: -4px;
         }
 
         .classname-row {
           display: flex;
-          flex: 0 0 30px;
           flex-direction: row;
-          margin-bottom: 7px;
+          margin-bottom: 19px;
           width: 100%;
+          margin-left: 0px;
 
           img.classimg {
             height: 24px;
@@ -81,7 +54,7 @@
 
           label.classname {
             font-family: var(--h3-font);
-            font-size: 28px;
+            font-size: 24px;
             width: 100%;
           }
 
@@ -97,37 +70,46 @@
 
         .hitpoints-row {
           display: flex;
-          flex: 0 0 30px;
-          margin-bottom: 7px;
+          align-items: center;
+          margin-bottom: 4px;
+          gap: 4px;
+        }
+
+        .hp-entries {
+          display: flex;
+          align-items: center;
+          gap: 4px;     
+           span {
+            font-size: 18px;
+            margin-top: 3px;
+          }    
         }
 
         .luck-row {
           display: flex;
-          flex: 0 0 30px;
-          margin-bottom: 7px;
-          width: 100%;
+          margin-bottom: 12px;
+          align-items: center;
+          gap: 4px;
 
           .luck-label:hover {
             color: var(--highlight-foreground-color);
-            text-shadow: 0 0 10px var(--highlight-background-color);
+            text-shadow: 0 0 16px var(--highlight-background-color);
             cursor: pointer;
           }
         }
 
         .luck-rule {
-          flex: 0 0 90px;
-          margin-left: 10px;
-          margin-right: 11px;
-          margin-top: 10px;
-          text-transform: lowercase;
+          
         }
 
         .stat-label {
-          float: left;
+
         }
 
         .ability-row {
-          margin-bottom: 10px;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
 
           &:last-child {
             margin-bottom: 0;
@@ -135,32 +117,30 @@
         }
 
         .ability-label {
-          font-family: var(--h2-font);
-          font-size: 24px;
+          font-family: var(--item-font);
+          font-size: 16px;
           margin-left: 5px;
-          margin-top: 5px;
-          float: left;
+          display: block;
+          padding-top: 4px;
         }
 
         .ability-input {
-          border: 1px solid #7a7971;
+          border: none;
           font-family: var(--item-font);
-          font-size: 14pt;
+          font-size: 32px;
           text-align: center;
-          padding: 5px;
-          padding-top: 10px;
-          line-height: 1.5;
           width: 42px;
-          height: 42px;
-          float: left;
+          height: 32px;
           border-radius: 0;
           color: var(--foreground-color);
+          font-weight: 600;
+          padding-bottom: 4px;
         }
       }
 
       .sheet-body {
         .feature-button {
-          min-width: 120px;
+          
         }
 
         .powers-top-row {
@@ -183,14 +163,6 @@
 
         .wield-power-button {
           width: 200px;
-          margin-bottom: 10px;
-          font-family: var(--h2-font);
-          font-size: 24px;
-          background-color: var(--foreground-color);
-          color: var(--background-color);
-          border: none;
-          border-bottom: 2px solid #777;
-          border-radius: 0;
         }
 
         .wield-rule {
@@ -210,7 +182,30 @@
 
         .carry-block {
           flex: 1;
-          text-align: center;
+          text-align: end;
+          display: flex;
+          align-items: flex-end;
+          flex-direction: column;
+
+          .carry-block-carrying {
+            display: flex;
+            align-items: center;
+            margin-bottom: 4px;
+
+            span {
+              font-size: 18px;
+            }
+
+            .stat-value {
+              color: var(--foreground-color);
+              font-size: 32px;
+              font-weight: 600;
+              padding: 0;
+              margin-top: -8px;
+              line-height: 32px;
+            }
+          }
+
         }
 
         .container-label {
@@ -219,6 +214,7 @@
 
         .encumbered {
           color: var(--highlight-background-color);
+          font-weight: 600;
         }
       }
     }
