--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=IM+Fell+English:ital@0;1&display=swap" rel="stylesheet");
+@import url("https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=IM+Fell+English:ital@0;1&display=swap");
 
 :root {
   --background-color: #000000;
@@ -15,6 +15,8 @@
   --color-bg-option: #000000;
   --window-background: #000000;
 
+  --button-color: #FFF;
+
   --h1-font: "Roman Antique Regular";
   --h2-font: "IM Fell English SC";
   --h3-font: "IM Fell English SC";
@@ -22,6 +24,8 @@
   --chat-font: "Alegreya"; 
   --chat-info-font: "Alegreya";
   --item-font: "Alegreya";
+
+  --button-font: "Alegreya"
 }
 
 /* ====================== */
