--- a/scss/skins/mb/skin.min.scss
+++ b/scss/skins/mb/skin.min.scss
@@ -8,7 +8,7 @@
   box-sizing: content-box;
   color: #000;
   cursor: auto;
-  font-family: "Special Elite";
+  font-family: "Alegreya";
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -65,7 +65,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  font-family: "Special Elite";
+  font-family: "Alegreya";
   overflow: hidden;
   position: relative;
   visibility: inherit !important;
@@ -80,7 +80,7 @@
   box-shadow: none;
 }
 .tox-tinymce-aux {
-  font-family: "Special Elite";
+  font-family: "Alegreya";
   z-index: 1300;
 }
 .tox-tinymce :focus,
@@ -293,7 +293,7 @@ button::-moz-focus-inner {
   color: #000;
   cursor: pointer;
   display: inline-block;
-  font-family: "Special Elite";
+  font-family: "Alegreya";
   font-size: 14px;
   font-style: normal;
   font-weight: 700;
@@ -401,7 +401,7 @@ button::-moz-focus-inner {
   box-sizing: border-box;
   cursor: pointer;
   display: inline-block;
-  font-family: "Special Elite";
+  font-family: "Alegreya";
   font-size: 16px;
   font-weight: 400;
   line-height: 1.3;
@@ -1323,7 +1323,7 @@ button::-moz-focus-inner {
   margin-left: auto;
 }
 .tox .tox-dialog__title {
-  font-family: "Special Elite";
+  font-family: "Alegreya";
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -1902,7 +1902,7 @@ body.tox-dialog__disable-scroll {
   box-shadow: none;
   box-sizing: border-box;
   color: #fff;
-  font-family: "Special Elite";
+  font-family: "Alegreya";
   font-size: 16px;
   line-height: 24px;
   margin: 0;
@@ -2002,7 +2002,7 @@ body.tox-dialog__disable-scroll {
   box-shadow: none;
   box-sizing: border-box;
   color: #fff;
-  font-family: "Special Elite";
+  font-family: "Alegreya";
   font-size: 16px;
   line-height: 24px;
   margin: 0;
