--- a/templates/actor/common/actor-equipment-list.html
+++ b/templates/actor/common/actor-equipment-list.html
@@ -1,9 +1,8 @@
 <li class="items-header flexrow">
-  <h3 class="item-name flexrow">{{localize "PB.Equipment"}}</h3>
-  <div class="item-controls">
+  <h4 class="item-name">{{localize "PB.Equipment"}}</h4>
+  <div class="item-create-button">
     <a class="item-control item-create" title='{{localize "PB.ItemCreate"}}'>
-      {{localize "PB.Add"}} <i class="fas fa-plus"></i>
-    </a>
+      <i class="fas fa-plus"></i></a>
   </div>
 </li>
 
